--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "csg": "^1.0.1",
     "three": "^0.172.0",
     "three-bvh-csg": "^0.0.16",
-    "three-mesh-bvh": "^0.9.0"
+    "three-mesh-bvh": "^0.9.0",
+    "troika-three-text": "^0.52.3"
   }
 }
